--- a/report/pers_schedule/biometrics_submission/mainmatter/introduction.tex
+++ b/report/pers_schedule/biometrics_submission/mainmatter/introduction.tex
@@ -5,10 +5,10 @@ In this decade prostate cancer (PCa) is the second most frequently diagnosed can
 
 Currently the largest AS program worldwide is Prostate Cancer Research International Active Surveillance, also known as PRIAS \citep{bokhorst2016decade}. Patients enrolled in PRIAS are closely monitored using serum prostate-specific antigen (PSA) levels, digital rectal examination (DRE) and repeat prostate biopsies. Results from biopsies are graded on a scale called Gleason, which takes values between 2 and 10, with 10 corresponding to the most serious state of the disease. At the time of induction in PRIAS, patients must have a Gleason score of six or less, DRE score of cT2c or less and a PSA of 10 ng/mL or less. A PSA doubling time (PSA-DT) of less than three years may indicate PCa progression, where PSA-DT is measured as the inverse of the slope of regression line through the base two logarithm of PSA values. However in PRIAS until either DRE or Gleason score is observed to be higher than the aforementioned threshold, patients are not removed from AS for curative treatment \citep{bokhorst2016decade}. When the Gleason score becomes greater than six, it is also known as Gleason reclassification (referred to as GR hereafter).
 
-Biopsies are reliable but they are also painful, cause anxiety, and have an associated risk of complications such as hematuria and sepsis \citep{loeb2013systematic}. Due to this reason, AS programs strongly advise at most one biopsy per year. Conducting a biopsy annually (we refer to it as annual schedule hereafter) has the advantage that GR can be detected within one year of its occurrence. This may work well for patients with a faster progressing PCa, however for patients with slowly progressing PCa, many unnecessary biopsies are scheduled. In patients with slowly progressing PCa, it has been observed that compliance with the schedule of biopsies decreases over time \citep{bokhorst2015compliance}. This reduces the effectiveness of AS programs because progression is detected late. In PRIAS, where a biopsy is conducted at each: year one, year four, year seven and year 10 (and every five years thereafter), the corresponding compliance rates were 81\%, 60\%, 53\% and 33\%, respectively. To avoid late detection of progression in patients with faster progressing PCa, PRIAS prescribes the annual schedule if at any time a patient has PSA-DT less than 10 years. 
+Biopsies are reliable but they are also painful, cause anxiety, and have an associated risk of complications such as hematuria and sepsis \citep{loeb2013systematic}. Due to this reason, AS programs strongly advise at most one biopsy per year. Conducting a biopsy annually (we refer to it as annual schedule hereafter) has the advantage that GR can be detected within one year of its occurrence. This may work well for patients with a faster progressing PCa, however for patients with slowly progressing PCa, many unnecessary biopsies are scheduled. In patients with slowly progressing PCa, it has been observed that compliance with the schedule of biopsies decreases over time \citep{bokhorst2015compliance}. In PRIAS, where a biopsy is conducted at each: year one, year four, year seven and year ten (and every five years thereafter), the corresponding compliance rates were 81\%, 60\%, 53\% and 33\%, respectively. Non-compliance reduces the effectiveness of AS programs because progression is detected late. To avoid late detection of PCa progression, if at any time a patient has PSA-DT less than 10 years, then PRIAS switches to the annual schedule. 
 
-This paper is motivated by the need to reduce the medical burden of biopsies while simultaneously avoiding late detection of PCa progression. To this end, we intend to create personalized schedules for biopsies which improve upon the PRIAS and annual schedule. That is, a different schedule for every patient utilizing his recorded information. Personalized schedules for screening have received much interest in the literature, especially in the medical decision making context. For diabetic retinopathy, cost optimized personalized schedules based on Markov models have been developed by \citet{bebu2017OptimalScreening}. For breast cancer, personalized mammography screening policy based on the prior screening history and personal risk characteristics of women, using partially observable Markov decision process (MDP) models have been proposed by \citet*{ayer2012or}. MDP models have also been used to develop personalized screening policies for cervical cancer \citep*{akhavan2017markov} and colorectal cancer \citep*{erenay2014optimizing}. Another type of model called joint model for time to event and longitudinal data \citep{tsiatis2004joint,rizopoulos2012joint} has also been used to create personalized schedules, albeit for longitudinal biomarkers \citep{drizopoulosPersScreening}. In context of PCa, \citet{zhang2012optimization} have used partially observable MDP models to personalize the decision of (not) deferring a biopsy to the next checkup time during the screening process. The decision is based on the baseline characteristics as well as a discretized PSA level of the patient at the current check up time.
+This paper is motivated by the need to reduce the medical burden of biopsies while simultaneously avoiding late detection of PCa progression. To this end, we intend to create personalized schedules for biopsies which improve upon the PRIAS and annual schedule. That is, a different schedule for every patient utilizing his recorded information. Personalized schedules for screening have received much interest in the literature, especially in the medical decision making context. For diabetic retinopathy, cost optimized personalized schedules based on Markov models have been developed by \citet{bebu2017OptimalScreening}. For breast cancer, personalized mammography screening policy based on the prior screening history and personal risk characteristics of women, using partially observable Markov decision process (MDP) models have been proposed by \citet*{ayer2012or}. MDP models have also been used to develop personalized screening policies for cervical cancer \citep*{akhavan2017markov} and colorectal cancer \citep*{erenay2014optimizing}. Another type of model called joint model for time to event and longitudinal data \citep{tsiatis2004joint,rizopoulos2012joint} has also been used to create personalized schedules, albeit for the measurement of longitudinal biomarkers \citep{drizopoulosPersScreening}. In context of PCa, \citet{zhang2012optimization} have used partially observable MDP models to personalize the decision of (not) deferring a biopsy to the next checkup time during the screening process. The decision is based on the baseline characteristics as well as a discretized PSA level of the patient at the current check up time.
 
 Our work differs from the above referenced work in certain aspects. Firstly, the schedules we propose in this paper, account for the latent between-patient heterogeneity. We achieve this using joint models, which are inherently patient-specific because they utilize random effects. Secondly, joint models allow a continuous time scale and utilize the entire history of PSA levels. Lastly, instead of making a binary decision of (not) deferring a biopsy to the next check up time, we schedule biopsies at a per patient optimal future time, utilizing the historical PSA measurements and repeat biopsy results of the patient up to the current check up time. To this end, using joint models we first obtain a full specification of the joint distribution of PSA levels and time of GR. We then use it to define a patient-specific posterior predictive distribution of the time of GR given the observed PSA measurements and previous biopsies. Using the general framework of Bayesian decision theory, we propose a set of loss functions which are minimized to find the optimal time of conducting a biopsy. These loss functions yield us two categories of personalized schedules, those based on expected time of GR and those based on the risk of GR. We also analyze an approach where the two types of schedules are combined. We also present methods to evaluate and compare personalized schedules with the PRIAS and annual schedule.
 
-The rest of the paper is organized as follows. Section \ref{sec : jm_framework} briefly covers the joint modeling framework. Section \ref{sec : pers_sched_approaches} details the personalized scheduling approaches we have proposed in this paper. In Section \ref{sec : choosing_schedule} we discuss methods for evaluation of a schedule and the choice of a suitable schedule. In Section \ref{sec : pers_schedule_PRIAS} we demonstrate the personalized schedules by employing them for the patients from the PRIAS program. Lastly, in Section \ref{sec: simulation_study}, we present the results from a simulation study we conducted to compare personalized schedules with PRIAS and annual schedule.
+The rest of the paper is organized as follows. Section \ref{sec : jm_framework} briefly covers the joint modeling framework. Section \ref{sec : pers_sched_approaches} details the personalized scheduling approaches we have proposed in this paper. In Section \ref{sec : choosing_schedule} we discuss methods for evaluation of a schedule and the choice of a schedule. In Section \ref{sec : pers_schedule_PRIAS} we demonstrate the personalized schedules by employing them for the patients from the PRIAS program. Lastly, in Section \ref{sec: simulation_study}, we present the results from a simulation study we conducted to compare personalized schedules with PRIAS and annual schedule.
