--- a/report/pers_schedule/biometrics_submission/mainmatter/pers_schedule_prias.tex
+++ b/report/pers_schedule/biometrics_submission/mainmatter/pers_schedule_prias.tex
@@ -22,7 +22,7 @@ h_i(t) = h_0(t) \exp\big\{\gamma_1 (Age-70)  + \gamma_2 (Age-70)^2 + \alpha_1 m_
 \end{equation}
 where $\alpha_1$ and $\alpha_2$ are measures of strength of the association between hazard of GR and $\log_2 \mbox{PSA}$ value $m_i(t)$ and $\log_2 \mbox{PSA}$ velocity $m'_i(t)$, respectively. Since the PRIAS schedule depends only on the observed PSA values (via PSA-DT), the interval censoring observed in PRIAS is independent and non informative of the underlying health of the patient.
 
-From the joint model fitted to the PRIAS dataset we found that only $\log_2 \mbox{PSA}$ velocity was strongly associated with hazard of GR. For any patient, a unit increase in $\log_2 \mbox{PSA}$ velocity led to an 11 times increase in the hazard of GR. The parameter estimates for the fitted joint model are presented in detail in Web Appendix C of the supplementary material. 
+From the joint model fitted to the PRIAS dataset we found that only $\log_2 \mbox{PSA}$ velocity was strongly associated with hazard of GR. For any patient, a unit increase in $\log_2 \mbox{PSA}$ velocity led to an 11 times increase in the hazard of GR. The parameter estimates for the fitted joint model are presented in detail in Web Appendix D of the supplementary material. 
 
 \subsection{Demonstration for Patient 3174}
 \label{subsec : demo_prias_pers_schedule}
@@ -34,4 +34,4 @@ Using the demonstration dataset, we next present the functioning of personalized
 \label{fig : prias_demo_pid_3174}
 \end{figure}
 
-The demonstration of personalized schedules for the two other patients from the demonstration data set is discussed in Web Appendix D of the supplementary material.
+The demonstration of personalized schedules for the two other patients from the demonstration data set is presented in Web Appendix E of the supplementary material.
