--- a/report/pers_schedule/biometrics_submission/supplementary/jm_param_estimation.tex
+++ b/report/pers_schedule/biometrics_submission/supplementary/jm_param_estimation.tex
@@ -2,9 +2,9 @@
 
 \section{Joint Model for Time to Event and Longitudinal Outcomes}
 \label{web_sec : jm_framework}
-We start with the definition of the joint modeling framework that will be used to fit a model to the available dataset, and then to plan biopsies for future patients. Let $T_i^*$ denote the true GR time for the $i$-th patient enrolled in an AS program. Let the vector of times at which biopsies are conducted for this patient be denoted by $T_i^b = \{T^b_{i0}, T^b_{i1}, \ldots, T^b_{i{N_i^b}}; T^b_{ij} < T^b_{ik}, \forall j<k\}$, where $N_i^b$ are the total number of biopsies conducted. Because of the periodical nature of biopsy schedules, $T_i^*$ cannot be observed directly and it is only known to fall in an interval $(l_i, r_i]$, where $l_i = T^b_{i{N_i^b - 1}}, r_i = T^b_{i{N_i^b}}$ if GR is observed, and $l_i = T^b_{i{N_i^b}}, r_i=\infty$ if patient drops out of AS before GR is observed. Further let $\bmath{y}_i$ denote the $n_i \times 1$  vector of PSA levels for the $i$-th patient. For a sample of $n$ patients the observed data is denoted by $\mathcal{D}_n = \{l_i, r_i, \bmath{y}_i; i = 1, \ldots, n\}$.
+We start with the definition of the joint modeling framework that will be used to fit a model to the available dataset, and then to plan biopsies for future patients. Let $T_i^*$ denote the true Gleason reclassification (referred to as GR hereafter) time for the $i$-th patient enrolled in an AS program. Let the vector of times at which biopsies are conducted for this patient be denoted by $T_i^b = \{T^b_{i0}, T^b_{i1}, \ldots, T^b_{i{N_i^b}}; T^b_{ij} < T^b_{ik}, \forall j<k\}$, where $N_i^b$ are the total number of biopsies conducted. Because of the periodical nature of biopsy schedules, $T_i^*$ cannot be observed directly and it is only known to fall in an interval $(l_i, r_i]$, where $l_i = T^b_{i{N_i^b - 1}}, r_i = T^b_{i{N_i^b}}$ if GR is observed, and $l_i = T^b_{i{N_i^b}}, r_i=\infty$ if patient drops out of AS before GR is observed. Further let $\bmath{y}_i$ denote the $n_i \times 1$  vector of PSA levels for the $i$-th patient. For a sample of $n$ patients the observed data is denoted by $\mathcal{D}_n = \{l_i, r_i, \bmath{y}_i; i = 1, \ldots, n\}$.
 
-The longitudinal outcome of interest, namely PSA level is continuous in nature and thus to model it the joint model utilizes a linear mixed effects model (LMM) of the form:
+The longitudinal outcome of interest, namely PSA level, is continuous in nature and thus to model it the joint model utilizes a linear mixed effects model (LMM) of the form:
 \begin{equation*}
 \begin{split}
 y_i(t) &= m_i(t) + \varepsilon_i(t)\\
