--- a/report/pers_schedule/biometrics_submission/mainmatter/discussion.tex
+++ b/report/pers_schedule/biometrics_submission/mainmatter/discussion.tex
@@ -2,8 +2,8 @@
 
 \section{Discussion}
 \label{sec: discussion}
-In this paper we presented personalized schedules for surveillance of cancer patients. The problem at hand was the following: Low risk PCa patients enrolled in AS have to undergo repeat biopsies on a frequent basis for examination of PCa progression, and since biopsies have an associated risk of complications, not all patients comply with the schedule of biopsies. This reduces the effectiveness of AS programs because PCa progression is detected late. To approach these problems we proposed personalized schedules based on joint model for time to event and longitudinal data. At any given point in time, the personalized schedules we proposed utilize a patient's information from historical PSA measurements and repeat biopsies conducted up to that time. We proposed two different classes of personalized schedules for individual patients. They are schedules based on expected and median time of GR of a patient, and schedules based on dynamic risk of GR. In addition we also proposed a combination (hybrid approach) of these two approaches, which is effective even in scenarios where variance of time of GR for a patient is high. We then proposed criteria for evaluation of various schedules and a method to select a suitable schedule.
+In this paper we presented personalized schedules for surveillance of cancer patients. The problem at hand was the following: Low risk PCa patients enrolled in AS have to undergo repeat biopsies on a frequent basis for examination of PCa progression, and since biopsies have an associated risk of complications, not all patients comply with the schedule of biopsies. This reduces the effectiveness of AS programs because PCa progression is detected late. To approach these problems we proposed personalized schedules based on joint model for time to event and longitudinal data. At any given point in time, the proposed personalized schedules utilize a patient's information from historical PSA measurements and repeat biopsies conducted up to that time. We proposed two different classes of personalized schedules for individual patients. They are schedules based on expected and median time of GR of a patient, and schedules based on dynamic risk of GR. In addition we also proposed a combination (hybrid approach) of these two approaches, which is useful in scenarios where variance of time of GR for a patient is high. We then proposed criteria for evaluation of various schedules and a method to select a suitable schedule.
 
-We demonstrated using PRIAS dataset that the personalized schedules adjust the time of biopsy on the basis of results from historical PSA measurements and repeat biopsies, even when the two are not in concordance with each other (Web Appendix D). Secondly, we conducted a simulation study to compare various schedules. We observed that personalized schedules based on dynamic risk of GR performed better than PRIAS schedule in terms of both mean and variance of number of biopsies and offset. The schedules based on expected and median time of GR conduct only two biopsies on average to detect GR, which is very promising compared to PRIAS (4.9 biopsies) and annual schedule (5.2 biopsies). In addition, for the former two schedules, at least 90\% of the patients had an offset less than 36 months, which is the maximum possible offset in PRIAS during the first 10 years of AS. We observed that the performance of the schedules also depends on the true GR time of the patient. For example, in simulated patients who have a slowly progressing PCa (subgroup $G_3$), personalized schedule based on expected time of GR conducts on average 2.3 biopsies to detect GR at 10 months since its occurrence. However in patients who have a faster progressing PCa (subgroup $G_1$), it detects GR at 21.7 months since its occurrence. For such patients, the annual schedule and PRIAS schedule may be preferred since they detect GR at 6 and 7.4 months since its occurrence, respectively. However for slowly progressing PCa patients they conduct up to 6 biopsies to detect GR at 6 and 8 months, respectively. In such scenarios, that is, where it is not known in advance if the patient will have a faster or slower progression of PCa, the hybrid approach provides an interesting alternative. This because, it conducts 1 less biopsy than annual schedule in faster progressing PCa patients while detecting GR at 10.3 months since its occurrence on average. Whereas, for slowly progressing PCa patients it conducts 2 less biopsies than the annual schedule while detecting GR at 8.6 months since its occurrence on average.
+We demonstrated using the PRIAS dataset that the personalized schedules adjust the time of biopsy on the basis of results from historical PSA measurements and repeat biopsies, even when the two are not in concordance with each other (Web Appendix E). Secondly, we conducted a simulation study to compare various schedules. We observed that the schedules based on expected and median time of GR conduct only two biopsies on average to detect GR, which is very promising compared to PRIAS (4.9 biopsies) and annual schedule (5.2 biopsies). We also observed that the performance of the schedules depends on the true GR time of the patient. For example, in simulated patients who have a slowly progressing PCa (subgroup $G_3$), personalized schedule based on expected time of GR detects GR one year earlier on average compared to patients who have a faster progressing PCa (subgroup $G_1$), while conducting approximately the same number of biopsies for both subgroups. For subgroup $G_1$, the annual or PRIAS schedule may be preferred because they detect GR at 6 and 7.4 months since its occurrence, respectively. However for slowly progressing PCa patients they conduct up to 6 biopsies to detect GR at 6 and 8 months, respectively. In such scenarios, that is, where it is not known in advance if the patient will have a faster or slower progression of PCa, the hybrid approach provides an interesting alternative. This because, it conducts 1 less biopsy than annual schedule in faster progressing PCa patients while detecting GR at 10.3 months since its occurrence on average. Whereas, for slowly progressing PCa patients it conducts 2 less biopsies than the annual schedule while detecting GR at 8.6 months since its occurrence on average.
 
-While each of the personalized methods has their own disadvantages and advantages, they also offer multiple choices to the AS programs to choose one as per their requirements, instead of choosing a common fixed schedule for all patients. In this regard, there is potential to develop more personalized schedules. For example, using loss functions which asymmetrically penalize overshooting/undershooting the target GR time can be interesting. Depending upon the requirements it is also possible to choose $\kappa$ on the basis of binary classification accuracy measures which focus on non-cases as well (Web Appendix E). Although in this work we assumed that GR time was interval censored, in reality the Gleason scores are susceptible to inter-observer variation \citep{Gleason_interobs_var}. Models and schedules which account for error in measurement of time of GR, will be interesting to investigate further. Lastly, there is potential for including diagnostic information from Magnetic resonance imaging (MRI) or DRE. Unlike PSA levels, such information may not always be continuous in nature, in which case our proposed methodology can be extended by utilizing the framework of generalized linear mixed models.
+While each of the personalized schedules have their own disadvantages and advantages, they also offer multiple choices to the AS programs to choose one as per their requirements, instead of choosing a common fixed schedule for all patients. In this regard, we proposed to choose schedules which conduct as less biopsies as possible while restricting the offset to be below a AS program specific threshold, or vice versa. There is also potential to develop more personalized schedules. For example, using loss functions which asymmetrically penalize overshooting/undershooting the target GR time can be interesting. Depending upon the requirements it is also possible to choose $\kappa$ on the basis of binary classification accuracy measures which focus on non-cases as well (Web Appendix F). Although in this work we assumed that GR time was interval censored, in reality the Gleason scores are susceptible to inter-observer variation \citep{Gleason_interobs_var}. Models and schedules which account for error in measurement of time of GR, will be interesting to investigate further. Lastly, there is potential for including diagnostic information from Magnetic resonance imaging (MRI) or DRE. Unlike PSA levels, such information may not always be continuous in nature, in which case our proposed methodology can be extended by utilizing the framework of generalized linear mixed models.
