--- a/report/pers_schedule/biometrics_submission/supplementary/prias_param_estimates.tex
+++ b/report/pers_schedule/biometrics_submission/supplementary/prias_param_estimates.tex
@@ -9,7 +9,8 @@ The posterior parameter estimates for the joint model we fitted to the PRIAS dat
        0.105 & 1.725 & 0.431 \\[0.3em]
        -0.140 & 0.431 & 1.326
      \end{bmatrix}
-\end{equation*} The effect of age only affects the baseline $\log_2 \mbox{PSA}$ score. However it is so small that it can be ignored for all practical purposes. Since the longitudinal evolution of $\log_2 \mbox{PSA}$ is modeled with non-linear terms, the interpretation of the coefficients corresponding to time is not straightforward. In lieu of the interpretation we present the fitted evolution of PSA (Web Figure \ref{fig : fitted_trend_psa}) over a period of 10 years for a hypothetical patient.
+\end{equation*} 
+The effect of age only affects the baseline $\log_2 \mbox{PSA}$ score. However it is so small that it can be ignored for all practical purposes. Since the longitudinal evolution of $\log_2 \mbox{PSA}$ is modeled with non-linear terms, the interpretation of the coefficients corresponding to time is not straightforward. In lieu of the interpretation we present the fitted evolution of PSA (Web Figure \ref{fig : fitted_trend_psa}) over a period of 10 years for a hypothetical patient.
 
 \begin{figure}[!htb]
 \centerline{\includegraphics[width=\columnwidth]{images/fitted_trend_psa.png}}
@@ -36,7 +37,7 @@ $\sigma$                               & 0.324 & 0.001 & 0.321 & 0.326          
 \end{center}
 \end{table}
 
-For the relative risk sub-model, the parameter estimates in Web Table \ref{tab : PSA_survival} show that only $\log_2 \mbox{PSA}$ velocity is strongly associated with hazard of GR. For any patient, a unit increase in $\log_2 \mbox{PSA}$ velocity corresponds to a 11 time increase in hazard of GR. The effect of $\log_2 \mbox{PSA}$ value and effect of age on hazard of GR are small enough to be safely ignored for all practical purposes.
+For the relative risk sub-model, the parameter estimates in \ref{tab : PSA_survival} show that only $\log_2 \mbox{PSA}$ velocity is strongly associated with hazard of GR. For any patient, a unit increase in $\log_2 \mbox{PSA}$ velocity corresponds to a 11 time increase in hazard of GR. The effect of $\log_2 \mbox{PSA}$ value and effect of age on hazard of GR are small enough to be safely ignored for all practical purposes.
 
 \begin{table}[!htb]
 \begin{center}
