made the introduction general for any cancer

--- a/report/pers_schedule/biometrics_submission/bibliography.bib
+++ b/report/pers_schedule/biometrics_submission/bibliography.bib
@@ -9,6 +9,17 @@ year={2015},
 publisher={Elsevier}
 }
 
+@article{esserman2014addressing,
+  title={Addressing overdiagnosis and overtreatment in cancer: a prescription for change},
+  author={Esserman, Laura J and Thompson, Ian M and Reid, Brian and Nelson, Peter and Ransohoff, David F and Welch, H Gilbert and Hwang, Shelley and Berry, Donald A and Kinzler, Kenneth W and Black, William C and others},
+  journal={The lancet oncology},
+  volume={15},
+  number={6},
+  pages={e234--e242},
+  year={2014},
+  publisher={Elsevier}
+}
+
 @article{nieboer2015nonlinear,
   title={Nonlinear modeling was applied thoughtfully for risk prediction: the {Prostate Biopsy Collaborative Group}},
   author={Nieboer, Daan and Vergouwe, Yvonne and Roobol, Monique J and Ankerst, Donna P and Kattan, Michael W and Vickers, Andrew J and Steyerberg, Ewout W and Group, Prostate Biopsy Collaborative},
@@ -341,6 +352,28 @@ number={14},
 pages={3512--3518},
 year={2012},
 publisher={Wiley}
+}
+
+@article{cairns2010guidelines,
+  title={Guidelines for colorectal cancer screening and surveillance in moderate and high risk groups (update from 2002)},
+  author={Cairns, Stuart R and Scholefield, John H and Steele, Robert J and Dunlop, Malcolm G and Thomas, Huw JW and Evans, Gareth D and Eaden, Jayne A and Rutter, Matthew D and Atkin, Wendy P and Saunders, Brian P and others},
+  journal={Gut},
+  volume={59},
+  number={5},
+  pages={666--689},
+  year={2010},
+  publisher={BMJ Publishing Group}
+}
+
+@article{mueller1988severe,
+  title={Severe acute pancreatitis after percutaneous biopsy of the pancreas},
+  author={Mueller, PR and Miketic, LM and Simeone, JF and Silverman, SG and Saini, SANJAY and Wittenberg, J and Hahn, PF and Steiner, E and Forman, BH},
+  journal={American Journal of Roentgenology},
+  volume={151},
+  number={3},
+  pages={493--494},
+  year={1988},
+  publisher={Am Roentgen Ray Soc}
 }
 
 @article{loeb2013systematic,
