--- a/report/pers_schedule/biometrics_submission/mainmatter/_NOT_IN_PAPER_.tex
+++ b/report/pers_schedule/biometrics_submission/mainmatter/_NOT_IN_PAPER_.tex
@@ -1,4 +1,6 @@
-The burden of unnecessary biopsies is not only medical but also financial. \citet{keegan2012active} have shown that annual schedules can cost more than the treatment (brachytherapy or prostatectomy) to AS programs, and if biopsies were to be conducted every other year, then up to 28\% increase in savings per head from AS over treatment could be achieved. Despite this, several AS programs employ the annual schedule \citep{tosoian2011active,welty2015extended}.
+The burden of unnecessary biopsies is not only medical but also financial. \citet{keegan2012active} have shown that annual schedules can cost more than the treatment (brachytherapy or prostatectomy) to AS programs, and if biopsies were to be conducted every other year, then up to 28\% increase in savings per head from AS over treatment could be achieved.
+
+At the time of induction in PRIAS, patients must have a Gleason score of six or less, DRE score of cT2c or less and a PSA of 10 ng/mL or less. When the Gleason score becomes greater than six, it is also known as Gleason reclassification (referred to as GR hereafter).
 
 \subsubsection{Scheduling multiple biopsies}
 \label{subsubsec : pers_sched_algorithm}
