--- a/report/pers_schedule/biometrics_submission/pers_schedules.tex
+++ b/report/pers_schedule/biometrics_submission/pers_schedules.tex
@@ -221,7 +221,7 @@ Accepted March} 0000.}
 %
 
 \begin{keywords}
- Active surveillance; Joint models; Personalized medicine; Prostate cancer.
+ Active surveillance; Biopsy; Cancer; Joint models; Personalized medicine
 \end{keywords}
 
 %  As usual, the \maketitle command creates the title and author/affiliations
