--- a/report/pers_schedule/biometrics_submission/mainmatter/introduction.tex
+++ b/report/pers_schedule/biometrics_submission/mainmatter/introduction.tex
@@ -1,14 +1,14 @@
 % !TEX root =  ../pers_schedules.tex 
 \section{Introduction}
 \label{sec : introduction}
-In this decade prostate cancer (PCa) is the second most frequently diagnosed cancer (14\% of all cancers) in males worldwide, with nearly 67\% of all PCa cases reported in developed countries \citep{GlobalCancerStats2012}. The increase in diagnosis of low grade PCa has been attributed to increase in life expectancy and increase in number of screening programs \citep{potoskyPSAcancer}. A major issue of screening programs that has also been established in other types of cancers (e.g., breast cancer) is over-diagnosis. To avoid overtreatment, patients diagnosed with low grade PCa are commonly advised to join active surveillance (AS) programs. The goal of AS is to routinely examine the progression of PCa and avoid serious treatments such as surgery or chemotherapy as long as they are not needed.
+Cancer screening is a widely used practice to detect cancer before symptoms appear in otherwise healthy individuals. A major issue of screening programs that has been observed in many types of cancers is overdiagnosis \citep{esserman2014addressing}. To avoid subsequent overtreatment, patients diagnosed with low grade cancers are commonly advised to join active surveillance (AS) programs. The goal of AS is to routinely examine the progression of cancer and avoid serious treatments such as surgery, chemotherapy, or radiotherapy as long as they are not needed. To this end, AS includes, but is not limited to periodical evaluation of biomarkers pertaining to the cancer, physical examination, medical imaging, and biopsy.
 
-Currently the largest AS program worldwide is Prostate Cancer Research International Active Surveillance, also known as PRIAS \citep{bokhorst2016decade}. Patients enrolled in PRIAS are closely monitored using serum prostate-specific antigen (PSA) levels, digital rectal examination (DRE) and repeat prostate biopsies. Results from biopsies are graded on a scale called Gleason, which takes values between 2 and 10, with 10 corresponding to the most serious state of the disease. At the time of induction in PRIAS, patients must have a Gleason score of six or less, DRE score of cT2c or less and a PSA of 10 ng/mL or less. A PSA doubling time (PSA-DT) of less than three years may indicate PCa progression, where PSA-DT is measured as the inverse of the slope of regression line through the base two logarithm of PSA values. However in PRIAS until either DRE or Gleason score is observed to be higher than the aforementioned threshold, patients are not removed from AS for curative treatment \citep{bokhorst2016decade}. When the Gleason score becomes greater than six, it is also known as Gleason reclassification (referred to as GR hereafter).
+The switch from AS to active treatment in many types of cancers (e.g., prostate cancer) is not done without consulting the biopsy results \citep{bokhorst2016decade}. Although biopsies can be reliable, but they are also painful, cause anxiety, and have an associated risk of complications such as inflammation, hematuria and sepsis \citep{loeb2013systematic,mueller1988severe}. Because of this reason the schedule of biopsies has significant medical consequences for patients. A frequent schedule of biopsies may help detecting cancer earlier but the corresponding risk of complications will be high. And although such a schedule may work well for faster progressing cancer patients, but for slowly progressing cancer patients many unnecessary biopsies will be scheduled. Furthermore, patients do not always comply with such a schedule, as has been observed by \citet{bokhorst2015compliance}. In the specific case of the world's largest AS program, Prostate Cancer Research International Active Surveillance (PRIAS), the compliance rate for biopsies steadily decreased from 81\% at year one of follow up, to 60\% at year four, 53\% at year seven and 33\% at year ten \citep{bokhorst2016decade}. Such non-compliance can lead to delayed detection of cancer progression, which reduces the effectiveness of AS programs.
 
-Biopsies are reliable but they are also painful, cause anxiety, and have an associated risk of complications such as hematuria and sepsis \citep{loeb2013systematic}. Due to this reason, AS programs strongly advise at most one biopsy per year. Conducting a biopsy annually (we refer to it as annual schedule hereafter) has the advantage that GR can be detected within one year of its occurrence. This may work well for patients with a faster progressing PCa, however for patients with slowly progressing PCa, many unnecessary biopsies are scheduled. In patients with slowly progressing PCa, it has been observed that compliance with the schedule of biopsies decreases over time \citep{bokhorst2015compliance}. In PRIAS, where a biopsy is conducted at each: year one, year four, year seven and year ten (and every five years thereafter), the corresponding compliance rates were 81\%, 60\%, 53\% and 33\%, respectively. Non-compliance reduces the effectiveness of AS programs because progression is detected late. To avoid late detection of PCa progression, if at any time a patient has PSA-DT less than 10 years, then PRIAS switches to the annual schedule. 
+This paper is motivated by the need to reduce the medical burden of biopsies while simultaneously avoiding late detection of cancer progression. In particular, we are motivated by the case of prostate cancer (PCa) patients, for whom several AS programs schedule biopsies with a gap of only one year (we refer to it as annual schedule hereafter) \citep{tosoian2011active,welty2015extended}. Most AS programs for PCa strongly advise against scheduling biopsies more frequently than the annual schedule. The PRIAS schedule for biopsies is relatively lenient: one biopsy each is scheduled at year one of follow up, year four, year seven, and year ten, and every five years thereafter. We intend to improve upon such fixed schedules by creating personalized schedules for biopsies. That is, a different schedule for every patient utilizing their periodically measured diagnostic information. In context of PCa, this information is serum prostate-specific antigen (PSA) levels (measured in ng/mL) and repeat biopsy results. A biopsy is graded using the Gleason score, which takes a value between 2 and 10, with 10 corresponding to the most serious state of the cancer. Patients enter AS only if their Gleason score is 6 or less. When a patient's Gleason score becomes greater than 6, also known as Gleason reclassification (referred to as GR hereafter), the patient switches from AS to active treatment.
 
-This paper is motivated by the need to reduce the medical burden of biopsies while simultaneously avoiding late detection of PCa progression. To this end, we intend to create personalized schedules for biopsies which improve upon the PRIAS and annual schedule. That is, a different schedule for every patient utilizing his recorded information. Personalized schedules for screening have received much interest in the literature, especially in the medical decision making context. For diabetic retinopathy, cost optimized personalized schedules based on Markov models have been developed by \citet{bebu2017OptimalScreening}. For breast cancer, personalized mammography screening policy based on the prior screening history and personal risk characteristics of women, using partially observable Markov decision process (MDP) models have been proposed by \citet*{ayer2012or}. MDP models have also been used to develop personalized screening policies for cervical cancer \citep*{akhavan2017markov} and colorectal cancer \citep*{erenay2014optimizing}. Another type of model called joint model for time to event and longitudinal data \citep{tsiatis2004joint,rizopoulos2012joint} has also been used to create personalized schedules, albeit for the measurement of longitudinal biomarkers \citep{drizopoulosPersScreening}. In context of PCa, \citet{zhang2012optimization} have used partially observable MDP models to personalize the decision of (not) deferring a biopsy to the next checkup time during the screening process. The decision is based on the baseline characteristics as well as a discretized PSA level of the patient at the current check up time.
+Personalized schedules for screening have received much interest in the literature, especially in the medical decision making context. For diabetic retinopathy, cost optimized personalized schedules based on Markov models have been developed by \citet{bebu2017OptimalScreening}. For breast cancer, personalized mammography screening policy based on the prior screening history and personal risk characteristics of women, using partially observable Markov decision process (MDP) models have been proposed by \citet*{ayer2012or}. MDP models have also been used to develop personalized screening policies for cervical cancer \citep*{akhavan2017markov} and colorectal cancer \citep*{erenay2014optimizing}. Another type of model called joint model for time to event and longitudinal data \citep{tsiatis2004joint,rizopoulos2012joint} has also been used to create personalized schedules, albeit for the measurement of longitudinal biomarkers \citep{drizopoulosPersScreening}. In context of PCa, \citet{zhang2012optimization} have used partially observable MDP models to personalize the decision of (not) deferring a biopsy to the next checkup time during the screening process. The decision is based on the baseline characteristics as well as a discretized PSA level of the patient at the current check up time.
 
-Our work differs from the above referenced work in certain aspects. Firstly, the schedules we propose in this paper, account for the latent between-patient heterogeneity. We achieve this using joint models, which are inherently patient-specific because they utilize random effects. Secondly, joint models allow a continuous time scale and utilize the entire history of PSA levels. Lastly, instead of making a binary decision of (not) deferring a biopsy to the next check up time, we schedule biopsies at a per patient optimal future time, utilizing the historical PSA measurements and repeat biopsy results of the patient up to the current check up time. To this end, using joint models we first obtain a full specification of the joint distribution of PSA levels and time of GR. We then use it to define a patient-specific posterior predictive distribution of the time of GR given the observed PSA measurements and previous biopsies. Using the general framework of Bayesian decision theory, we propose a set of loss functions which are minimized to find the optimal time of conducting a biopsy. These loss functions yield us two categories of personalized schedules, those based on expected time of GR and those based on the risk of GR. We also analyze an approach where the two types of schedules are combined. We also present methods to evaluate and compare personalized schedules with the PRIAS and annual schedule.
+Our work differs from the above referenced work in certain aspects. Firstly, the schedules we propose in this paper, account for the latent between-patient heterogeneity. We achieve this using joint models, which are inherently patient-specific because they utilize random effects. Secondly, joint models allow a continuous time scale and utilize the entire history of PSA levels. Lastly, instead of making a binary decision of (not) deferring a biopsy to the next pre-scheduled check up time, we schedule biopsies at a per patient optimal future time. To this end, using joint models we first obtain a full specification of the joint distribution of PSA levels and time of GR. We then use it to define a patient-specific posterior predictive distribution of the time of GR given the observed PSA measurements and repeat biopsies up to the current check up time. Using the general framework of Bayesian decision theory, we propose a set of loss functions which are minimized to find the optimal time of conducting a biopsy. These loss functions yield us two categories of personalized schedules, those based on expected time of GR and those based on the risk of GR. We also analyze an approach where the two types of schedules are combined. We also present methods to evaluate and compare the various schedules for biopsies.
 
 The rest of the paper is organized as follows. Section \ref{sec : jm_framework} briefly covers the joint modeling framework. Section \ref{sec : pers_sched_approaches} details the personalized scheduling approaches we have proposed in this paper. In Section \ref{sec : choosing_schedule} we discuss methods for evaluation of a schedule and the choice of a schedule. In Section \ref{sec : pers_schedule_PRIAS} we demonstrate the personalized schedules by employing them for the patients from the PRIAS program. Lastly, in Section \ref{sec: simulation_study}, we present the results from a simulation study we conducted to compare personalized schedules with PRIAS and annual schedule.
